--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/wantyouring/instaclone-backend#readme",
   "dependencies": {
+    "@prisma/client": "^2.22.0",
     "apollo-server": "^2.24.0",
     "graphql": "^15.5.0"
   },
