--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@prisma/client": "^2.22.0",
     "apollo-server": "^2.24.0",
+    "bcrypt": "^5.0.1",
     "dotenv": "^9.0.1",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.4"
